@@ -4,6 +4,7 @@ Version 0.9.0~dev
 	* Call command callback even if there is no output data read from standard
 	  outputs, refs: #6583.
 	* Compute progress in bmx worker, closes: #6583.
+	* Remove memory_limit from Command.run arguments.
 
 Version 0.8.1 Released on 2013/01/16
 
